# highlowticker-algo-mcp

./: .gitignore  README.md  pyproject.toml
scripts/: mcp_dev.py  smoke.py
src/hlt_algo_mcp/: __init__.py  buffer.py  server.py
src/hlt_algo_mcp/resources/: algo-feed.schema.json  field-reference.md  python-client-quickstart.md
tests/: test_buffer.py  test_tools.py  tests_helpers.py
