[project]
name = "highlowticker-algo-mcp"
version = "0.2.0"
description = "Read-only MCP server exposing the HighLowTicker algo feed to agents."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["highlowticker-algo-feed>=0.1", "mcp>=1.2"]

[project.urls]
Homepage = "https://github.com/highlowtick/highlowticker-algo-mcp"
Source = "https://github.com/highlowtick/highlowticker-algo-mcp"
Issues = "https://github.com/highlowtick/highlowticker-algo-mcp/issues"

[project.scripts]
hlt-algo-mcp = "hlt_algo_mcp.server:main"

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hlt_algo_mcp"]
